[gd_scene load_steps=3 format=3 uid="uid://b6n7cwv706x5n"]

[ext_resource type="Script" path="res://source/match/debug/GodModeHud.gd" id="1_n4lpk"]
[ext_resource type="Script" path="res://source/match/debug/PlayerManager.gd" id="2_julod"]

[node name="GodModeHUD" type="CanvasLayer"]
script = ExtResource("1_n4lpk")

[node name="PlayerManager" type="MarginContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
theme_override_constants/margin_left = 5
script = ExtResource("2_julod")

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerManager"]
offset_left = 5.0
offset_right = 149.0
offset_bottom = 147.0
theme_override_constants/separation = 5

[node name="PanelContainer" type="PanelContainer" parent="PlayerManager/VBoxContainer"]
offset_right = 144.0
offset_bottom = 71.0

[node name="MarginContainer" type="MarginContainer" parent="PlayerManager/VBoxContainer/PanelContainer"]
offset_right = 144.0
offset_bottom = 71.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerManager/VBoxContainer/PanelContainer/MarginContainer"]
offset_left = 5.0
offset_top = 5.0
offset_right = 139.0
offset_bottom = 66.0

[node name="Label" type="Label" parent="PlayerManager/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
offset_right = 134.0
offset_bottom = 26.0
text = "Controlled player"
horizontal_alignment = 1

[node name="ControlledPlayerSpinBox" type="SpinBox" parent="PlayerManager/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 30.0
offset_right = 134.0
offset_bottom = 61.0

[node name="PanelContainer2" type="PanelContainer" parent="PlayerManager/VBoxContainer"]
offset_top = 76.0
offset_right = 144.0
offset_bottom = 147.0

[node name="MarginContainer" type="MarginContainer" parent="PlayerManager/VBoxContainer/PanelContainer2"]
offset_right = 144.0
offset_bottom = 71.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerManager/VBoxContainer/PanelContainer2/MarginContainer"]
offset_left = 5.0
offset_top = 5.0
offset_right = 139.0
offset_bottom = 66.0

[node name="Label" type="Label" parent="PlayerManager/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
offset_right = 134.0
offset_bottom = 26.0
text = "Visible Player"
horizontal_alignment = 1

[node name="VisiblePlayerSpinBox" type="SpinBox" parent="PlayerManager/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
offset_top = 30.0
offset_right = 134.0
offset_bottom = 61.0

[connection signal="value_changed" from="PlayerManager/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ControlledPlayerSpinBox" to="PlayerManager" method="_on_controlled_player_spin_box_value_changed"]
[connection signal="value_changed" from="PlayerManager/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/VisiblePlayerSpinBox" to="PlayerManager" method="_on_visible_player_spin_box_value_changed"]
